test/should_not_compile/signature3.sml
signature Foo = sig
eqtype t
end where type t = int -> int;
